--- a/Kari Games Scheduler_V3.html
+++ b/Kari Games Scheduler_V3.html
@@ -302,6 +302,8 @@ h4 {
   padding: 12px;
   justify-content: center;
   margin-top: 10px;
+  width: 90%;
+  max-width: 600px;
 }
 
 .rest-btn {
@@ -1319,6 +1321,7 @@ window.addEventListener('beforeunload', function (e) {
 
 </body>
 </html>
+
 
 
 
