--- a/Kari Games Scheduler_V3.html
+++ b/Kari Games Scheduler_V3.html
@@ -185,14 +185,15 @@ h4 {
   color: #3b0073;
   border-radius: 12px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-  width: 90%;
-  max-width: 600px;
-  padding: 16px 20px; /* ✅ consistent padding */
+  width: 600px;             /* 🔒 fixed constant width */
+  box-sizing: border-box;   /* padding & border included in width */
+  padding: 16px 20px;
   text-align: center;
   font-weight: bold;
   display: flex;
   flex-direction: column;
-  gap: 12px; /* uniform internal spacing */
+  gap: 12px;
+  flex-shrink: 0;           /* 🔒 prevent flexbox shrinking */
 }
 
 .match-card h3 {
@@ -292,6 +293,8 @@ h4 {
 }
 
 /* === Rest Section === */
+
+
 .rest-box {
   display: flex;
   flex-wrap: wrap;
@@ -302,8 +305,9 @@ h4 {
   padding: 12px;
   justify-content: center;
   margin-top: 10px;
-  width: 90%;
-  max-width: 600px;
+  width: 600px;             /* 🔒 fixed constant width */
+  box-sizing: border-box;
+  flex-shrink: 0;           /* 🔒 no shrinking on mobile */
 }
 
 .rest-btn {
@@ -1321,6 +1325,7 @@ window.addEventListener('beforeunload', function (e) {
 
 </body>
 </html>
+
 
 
 
