--- a/Kari Games Scheduler_V3.html
+++ b/Kari Games Scheduler_V3.html
@@ -4,179 +4,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Badminton Pair-UP</title>
-  <style>
-   /* === GLOBAL === */
-body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-  background: linear-gradient(135deg, #3b0073, #7d00b8);
-  color: white;
-  text-align: center;
-  overflow-x: hidden;
-}
-header {
-  padding: 8px;
-}
-h1 {
-  font-size: 20px;
-  margin: 0;
-  font-weight: bold;  
-  letter-spacing: 2px;
-}
-h3 {
-  font-size: 15px;
-  margin-bottom: 8px;
-  color: #3a1818;
-}
-h4 {
-  font-size: 15px;
-  margin-top: 0;
-  margin-bottom: 8px;
-  margin: 0;
-  padding: 0;
-}
 
-/* === PAGE 1: Player Entry / Setup === */
-.container {
-  max-width: 800px;
-  margin: auto;
-  padding: 8px;
-}
-.card {
-  background: white;
-  color: purple;
-  padding: 8px;
-  margin-bottom: 8px;
-  border-radius: 12px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.3);
-}
-.card input, .card select, .card button, textarea {
+</head>
+  <style>
+/* === Page Layout === */
+.page {
   width: 100%;
-  padding: 8px;
-  margin: 8px 0;
-  font-size: 16px;
-  border-radius: 6px;
-  border: 1px solid #ccc;
+  max-width: 600px;          /* consistent width across all screens */
+  margin: 0 auto;            /* center horizontally */
+  padding: 16px 12px;
   box-sizing: border-box;
 }
-.card button {
-  background: purple;
-  color: white;
-  border: none;
-  font-weight: bold;
-  cursor: pointer;
-  transition: background 0.3s, transform 0.2s;
-}
-.card button:hover {
-  background: #5e009c;
-  transform: scale(1.05);
-}
-#player-list-table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-top: 2px;
-}
-#player-list-table th, #player-list-table td {
-  border: 1px solid #ccc;
-  padding: 1px 1px;
-  text-align: left;
-  font-size: 12px;
-}
-#player-list-table th {
-  background: #f2f2f2;
-}
-.delete-btn {
-  background: none;
-  border: none;
-  color: #d11a2a;
-  font-size: 8px;
-  cursor: pointer;
-}
-.delete-btn:hover {
-  color: #a00;
-}
-.fixed-pairs-list {
-  margin-top: 8px;
-}
-.fixed-pair-item {
-  background: #eee;
-  color: black;
-  padding: 6px 8px;
-  border-radius: 6px;
-  margin: 5px 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.fixed-pair-remove {
-  color: #d11a2a;
-  cursor: pointer;
-  margin-left: 8px;
-}
-.fixed-pair-remove:hover {
-  color: #a00;
-}
-.main-action {
-  display: block;
-  width: 100%;
-  background: orange;
-  color: black;
-  font-size: 20px;
-  font-weight: bold;
-  padding: 8px;
-  border-radius: 8px;
-  margin-top: 8px;
-  cursor: pointer;
-  border: none;
-  transition: background 0.3s, transform 0.2s;
-}
-.main-action:hover {
-  background: #ffb84d;
-  transform: scale(1.05);
-}
 
-/* === Modal === */
-#importModal {
-  display: none;
-  position: fixed;
-  top: 0; left: 0;
-  width: 100vw; height: 100vh;
-  background: rgba(0,0,0,0.6);
-  z-index: 1000;
-}
-#importModal .modal-content {
-  background: white;
-  color: black;
-  max-width: 400px;
-  margin: 100px auto;
-  padding: 20px;
-  border-radius: 10px;
-}
-#importModal button {
-  margin-top: 10px;
-  padding: 8px 12px;
-  border-radius: 6px;
-}
-.ok-btn {
-  background: #009c3c;
-  color: white;
-  border: none;
-  font-weight: bold;
-  cursor: pointer;
-}
-.ok-btn:hover {
-  background: #00b84d;
-}
-/* === PAGE 2: Match Results / Court Layout === */
-/* === PAGE 2: Match Results / Court Layout === */
+/* === Game Results Container === */
 #game-results {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 12px; /* uniform spacing between match cards */
+  gap: 12px;
   padding: 16px;
   background: linear-gradient(180deg, #3b0073 0%, #7d00b8 100%);
   min-height: 40vh;
+  border-radius: 12px;
 }
 
 /* === Match Card === */
@@ -185,27 +34,25 @@ h4 {
   color: #3b0073;
   border-radius: 12px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-  width: 600px;             /* 🔒 fixed constant width */
-  box-sizing: border-box;   /* padding & border included in width */
+  width: 100%;
   padding: 16px 20px;
   text-align: center;
   font-weight: bold;
   display: flex;
   flex-direction: column;
   gap: 12px;
-  flex-shrink: 0;           /* 🔒 prevent flexbox shrinking */
 }
 
 .match-card h3 {
   font-size: 22px;
-  margin: 0; /* reset */
+  margin: 0;
 }
 
 .match-card .teams {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 8px; /* consistent gap between teams */
+  gap: 8px;
 }
 
 .team {
@@ -215,14 +62,16 @@ h4 {
   min-width: 120px;
 }
 
-.vs-text {
+.vs-text,
+.vs {
   font-size: 20px;
   font-weight: bold;
   color: #3b0073;
   flex: 0 0 auto;
-  margin: 0 8px; /* balanced spacing */
+  margin: 0 8px;
 }
 
+/* === Player Buttons === */
 .Lplayer-btn,
 .Rplayer-btn {
   border: none;
@@ -233,6 +82,7 @@ h4 {
   color: #fff;
   text-align: center;
   transition: transform 0.2s, background 0.2s;
+  cursor: grab;
 }
 
 .Lplayer-btn { background: #009c3c; }
@@ -293,8 +143,6 @@ h4 {
 }
 
 /* === Rest Section === */
-
-
 .rest-box {
   display: flex;
   flex-wrap: wrap;
@@ -305,25 +153,9 @@ h4 {
   padding: 12px;
   justify-content: center;
   margin-top: 10px;
-  width: 600px;             /* 🔒 fixed constant width */
-  box-sizing: border-box;
-  flex-shrink: 0;           /* 🔒 no shrinking on mobile */
+  width: 100%;
 }
 
-.rest-btn {
-  border: none;
-  border-radius: 8px;
-  padding: 8px 14px;
-  font-size: 15px;
-  cursor: pointer;
-  font-weight: 600;
-  transition: transform 0.1s, opacity 0.2s;
-}
-.rest-btn:hover {
-  transform: scale(1.05);
-  opacity: 0.9;
-}
-    
 .rest-box.drag-over {
   outline: 3px dashed #ff9800;
 }
@@ -332,28 +164,73 @@ h4 {
   min-height: 40px;
 }
 
-.rest-btn, .Lplayer-btn, .Rplayer-btn {
+.rest-btn {
+  border: none;
+  border-radius: 8px;
+  padding: 8px 14px;
+  font-size: 15px;
   cursor: grab;
+  font-weight: 600;
+  transition: transform 0.1s, opacity 0.2s;
   margin: 2px;
+  color: white;
 }
+
+.rest-btn:hover {
+  transform: scale(1.05);
+  opacity: 0.9;
+}
+
 /* === Mobile Adjustments === */
 @media (max-width: 600px) {
+  body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+  }
+
+  .page {
+    width: 100%;
+    padding: 12px;
+  }
+
+  #game-results,
+  .match-card,
+  .rest-box {
+    width: 100%;
+    border-radius: 10px;
+  }
+
   .match-card {
-    width: 95%;
-    padding: 14px;
-  }
-  .teams {
-    gap: 6px;
-  }
-  .round-navigation {
+    padding: 12px;
     gap: 10px;
   }
-  .round-navigation .round-label {
-    font-size: 0.9rem;
+
+  .teams {
+    flex-direction: column;
+    gap: 8px;
+  }
+
+  .Lplayer-btn,
+  .Rplayer-btn,
+  .rest-btn {
+    font-size: 15px;
+    padding: 8px;
+    width: 100%;
+  }
+
+  .round-navigation {
+    flex-wrap: wrap;
+    gap: 8px;
+    padding: 10px;
+  }
+
+  .round-navigation button {
+    flex: 1 1 auto;
+    min-width: 80px;
   }
 }
-  </style>
-</head>
+</style>
 <body onload="initPage()">
 
   <!-- Page 1 -->
@@ -1325,6 +1202,7 @@ window.addEventListener('beforeunload', function (e) {
 
 </body>
 </html>
+
 
 
 
