--- a/temp.html
+++ b/temp.html
@@ -55,8 +55,7 @@
 
     /* === FORM ELEMENTS === */
     .card input,
-    .card select,
-    .card textarea,
+    .card select,   
     .card button {
       width: 100%;
       padding: 8px;
@@ -67,8 +66,7 @@
     }
 
     .card input,
-    .card select,
-    .card textarea {
+    .card select {
       border: 1px solid #ccc;
     }
 
@@ -325,7 +323,60 @@
   cursor: grab;
   margin: 2px;
 }
+#importModal .modal-content {
+  background: white;
+  color: black;
+  max-width: 400px;
+  margin: 100px auto;
+  padding: 20px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+   justify-content: center;
+}
 
+#importModal textarea {
+  width: 100%;
+  box-sizing: border-box;
+  margin-bottom: 15px;
+  padding: 8px;
+  border-radius: 6px; 
+  resize: vertical;
+}
+
+.modal-buttons {
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px; /* spacing between buttons */
+}
+
+.ok-btn {
+  background: #009c3c;
+  color: white;
+  border: none;
+  font-weight: bold;
+  cursor: pointer;
+  padding: 8px 12px;
+  border-radius: 6px;
+}
+
+.ok-btn:hover {
+  background: #00b84d;
+}
+
+.cancel-btn {
+  background: #d11a2a;
+  color: white;
+  border: none;
+  font-weight: bold;
+  cursor: pointer;
+  padding: 8px 12px;
+  border-radius: 6px;
+}
+
+.cancel-btn:hover {
+  background: #ff3b3b;
+}
 }
   </style>
 </head>
@@ -340,11 +391,13 @@
       <div class="card">
         <button onclick="showImportModal()">Paste All Players</button>
       </div>
-      <div id="importModal">
-        <div class="modal-content">
+        <div id="importModal">
+          <div class="modal-content">
           <textarea id="players-textarea" rows="8" placeholder="Name,Gender&#10;Kari,Male&#10;Bhavani,Female"></textarea>
-          <button class="ok-btn" onclick="addPlayersFromText()">Import</button>
-          <button onclick="hideImportModal()" style="background:#d11a2a; color:white;">Cancel</button>
+          <div class="modal-buttons">
+            <button class="ok-btn" onclick="addPlayersFromText()">Import</button>
+            <button class="cancel-btn" onclick="hideImportModal()">Cancel</button>
+          </div>
         </div>
       </div>
       <!-- Add Player Form -->
@@ -732,134 +785,6 @@ function AischedulerNextRound() {
 }
 
   
-function AischedulerNextRoundold() {
-  const { players, numCourts, fixedPairs, restCount, playedTogether, playedAgainst, fixedMap } = schedulerState;
-  const totalPlayers = players.length;
-  const numPlayersPerRound = numCourts * 4;
-  const numResting = Math.max(totalPlayers - numPlayersPerRound, 0);
-  schedulerState.roundIndex++;
-
-  // === 1️⃣ Pick resting players (fairly) ===
-  let resting = [...players]
-    .sort((a, b) => (restCount.get(a) || 0) - (restCount.get(b) || 0))
-    .slice(0, numResting);
-
-  // Ensure fixed pairs rest together
-  for (const p of [...resting]) {
-    if (fixedMap.has(p)) {
-      const partner = fixedMap.get(p);
-      if (!resting.includes(partner)) resting.push(partner);
-    }
-  }
-
-  // Ensure enough players remain
-  while (players.length - resting.length < numPlayersPerRound) {
-    const maxRest = resting.reduce(
-      (maxP, p) => restCount.get(p) > restCount.get(maxP) ? p : maxP,
-      resting[0]
-    );
-    resting = resting.filter(p => p !== maxRest);
-  }
-
-  const playing = players.filter(p => !resting.includes(p)).slice(0, numPlayersPerRound);
-  const restingWithNumber = resting.map(p => `${p}#${(restCount.set(p, (restCount.get(p) || 0) + 1), restCount.get(p))}`);
-
-  // === 2️⃣ Build pairs (prefer unplayed ones) ===
-  const pairs = [];
-  const used = new Set();
-
-  // Add fixed pairs first
-  for (const [p1, p2] of fixedPairs) {
-    if (playing.includes(p1) && playing.includes(p2)) {
-      pairs.push([p1, p2]);
-      used.add(p1); used.add(p2);
-    }
-  }
-
-  const free = playing.filter(p => !used.has(p)).sort(() => Math.random() - 0.5);
-  const pairScores = [];
-
-  for (let i = 0; i < free.length - 1; i++) {
-    for (let j = i + 1; j < free.length; j++) {
-      const key = [free[i], free[j]].sort().join("&");
-      const score = playedTogether.has(key) ? schedulerState.roundIndex - playedTogether.get(key) : Infinity;
-      pairScores.push({ key, p1: free[i], p2: free[j], score });
-    }
-  }
-
-  // Prefer new pairs first
-  pairScores.sort((a, b) => (b.score === Infinity ? 99999 : b.score) - (a.score === Infinity ? 99999 : a.score));
-
-  for (const { key, p1, p2 } of pairScores) {
-    if (!used.has(p1) && !used.has(p2)) {
-      pairs.push([p1, p2]);
-      used.add(p1); used.add(p2);
-      playedTogether.set(key, schedulerState.roundIndex);
-    }
-  }
-
-  // === 3️⃣ Form games — using 3-level preference ===
-  const games = [];
-  const attempted = new Set();
-
-  for (let i = 0; i < pairs.length - 1; i++) {
-    for (let j = i + 1; j < pairs.length; j++) {
-      const matchupKey = [...pairs[i], ...pairs[j]].sort().join(" vs ");
-      const bothNew = !playedAgainst.has(matchupKey);
-      attempted.add(matchupKey);
-      games.push({ pair1: pairs[i], pair2: pairs[j], matchupKey, bothNew });
-    }
-  }
-
-  // Sort by newness
-  const rankedGames = games.sort((a, b) => {
-    const aScore =
-      (a.bothNew ? 3 : 0) +
-      ((!playedTogether.has(a.pair1.join("&")) || !playedTogether.has(a.pair2.join("&"))) ? 1 : 0);
-    const bScore =
-      (b.bothNew ? 3 : 0) +
-      ((!playedTogether.has(b.pair1.join("&")) || !playedTogether.has(b.pair2.join("&"))) ? 1 : 0);
-    return bScore - aScore;
-  });
-  
-  
-
-  // Pick best ones until courts filled
-  const usedPairs = new Set();
-  const finalGames = [];
-  for (const g of rankedGames) {
-    const key = g.matchupKey;
-    if (finalGames.length >= numCourts) break;
-    if ([...g.pair1, ...g.pair2].some(p => usedPairs.has(p))) continue;
-    finalGames.push({
-      court: finalGames.length + 1,
-      pair1: g.pair1,
-      pair2: g.pair2
-    });
-    [...g.pair1, ...g.pair2].forEach(p => usedPairs.add(p));
-    playedAgainst.add(key);
-  }
-  
-  // Check if everything scored 0 → then reset
-    
-  
-  const allFalse = rankedGames.every(g => !g.bothNew);
-
-  if (allFalse) {
-    schedulerState.playedTogether = new Map();
-    schedulerState.playedAgainst = new Set();
-    //schedulerState.roundIndex = 0;
-  }
-  // === 4️⃣ Return finalized round ===
-  const roundData = {
-    round: schedulerState.roundIndex,
-    resting: restingWithNumber,
-    playing,
-    games: finalGames
-  }; 
-  
-  return roundData;
-}
 
 
 /* =========================
@@ -966,7 +891,7 @@ function makePlayerButton(name, teamSide, gameIndex, playerIndex, data, index) {
 
   // Allow drop from rest → team
   btn.addEventListener('dragover', (e) => e.preventDefault());
-  btn.addEventListener('drop', (e) => handleDropToTeam(e, teamSide, gameIndex, playerIndex, data, index));
+  btn.addEventListener('drop', (e) => handleDropRestToTeam(e, teamSide, gameIndex, playerIndex, data, index));
 
   return btn;
 }
@@ -1022,7 +947,7 @@ function handleDropToRestArea(e, data, index) {
 }
 
 // When dropping a resting player onto a team button
-function handleDropToTeam(e, teamSide, gameIndex, playerIndex, data, index) {
+function handleDropRestToTeam(e, teamSide, gameIndex, playerIndex, data, index) {
   const drop = JSON.parse(e.dataTransfer.getData('text/plain'));
   if (drop.type !== 'rest') return;
 
@@ -1030,33 +955,153 @@ function handleDropToTeam(e, teamSide, gameIndex, playerIndex, data, index) {
   const restIndex = data.resting.indexOf(drop.player);
   if (restIndex === -1) return;
 
+  // Remove "#number" from player name
+  const baseNewPlayer = drop.player.replace(/#\d+$/, '');
   const oldPlayer = data.games[gameIndex][teamKey][playerIndex];
-  data.games[gameIndex][teamKey][playerIndex] = drop.player;
+  data.games[gameIndex][teamKey][playerIndex] = baseNewPlayer;
 
-  // Replace the resting slot with the outgoing player
-  data.resting[restIndex] = oldPlayer === '(Empty)' ? null : oldPlayer;
+  const { restCount, playedTogether, playedAgainst } = schedulerState;
+
+  // === 1️⃣ Update rest counts ===
+  // oldPlayer now rests → +1
+  if (oldPlayer && oldPlayer !== '(Empty)') {
+    const cleanOld = oldPlayer.replace(/#\d+$/, '');
+    const newCount = (restCount.get(cleanOld) || 0) + 1;
+    restCount.set(cleanOld, newCount);
+
+    // Add "#restCount" suffix in resting box
+    data.resting[restIndex] = `${cleanOld}#${newCount}`;
+  } else {
+    data.resting[restIndex] = null;
+  }
+
+  // newPlayer now plays → -1 (minimum 0)
+  restCount.set(baseNewPlayer, Math.max((restCount.get(baseNewPlayer) || 0) - 1, 0));
+
+  // Clean nulls
   data.resting = data.resting.filter(p => p && p !== '(Empty)');
 
+  // === 2️⃣ Update playedTogether / playedAgainst ===
+  const thisGame = data.games[gameIndex];
+  const pair1 = thisGame.pair1.filter(p => p && p !== '(Empty)');
+  const pair2 = thisGame.pair2.filter(p => p && p !== '(Empty)');
+
+  const pairKey = (a, b) => [a, b].sort().join("&");
+  const matchupKey = [...pair1, ...pair2].map(p => p.toLowerCase()).sort().join("&");
+
+  // Remove old relationships for oldPlayer
+  if (oldPlayer && oldPlayer !== '(Empty)') {
+    const cleanOld = oldPlayer.replace(/#\d+$/, '');
+    [...pair1, ...pair2].forEach(p => {
+      const cleanP = p.replace(/#\d+$/, '');
+      if (cleanP !== cleanOld) {
+        playedTogether.delete(pairKey(cleanOld, cleanP));
+        playedAgainst.delete(pairKey(cleanOld, cleanP));
+      }
+    });
+  }
+
+  // Add new relationships for newPlayer
+  const teammates = teamSide === 'L' ? pair1 : pair2;
+  const opponents = teamSide === 'L' ? pair2 : pair1;
+  teammates.forEach(tp => {
+    const cleanTp = tp.replace(/#\d+$/, '');
+    if (cleanTp !== baseNewPlayer) {
+      playedTogether.set(pairKey(baseNewPlayer, cleanTp), schedulerState.roundIndex);
+    }
+  });
+  playedAgainst.add(matchupKey);
+
+  // === 3️⃣ Refresh UI ===
   showRound(index);
 }
+
 
 // When swapping one resting player with another resting player
-function handleDropToSpecificRest(e, restPlayer, data, index) {
+function handleDropToSpecificRest(e, targetPlayer, data, index) {
   const drop = JSON.parse(e.dataTransfer.getData('text/plain'));
-  if (drop.type !== 'team') return;
+  if (drop.type !== 'team') return; // only allow swapping between team players
 
   const { gameIndex, teamSide, playerIndex, player } = drop;
-  const teamKey = teamSide === 'L' ? 'pair1' : 'pair2';
-  const team = data.games[gameIndex][teamKey];
-  const restIndex = data.resting.indexOf(restPlayer);
-  if (restIndex === -1) return;
 
-  // Swap them
-  team[playerIndex] = restPlayer;
-  data.resting[restIndex] = player;
+  // Find which team/side the target player belongs to
+  let targetGameIndex = null;
+  let targetTeamKey = null;
+  let targetPlayerIndex = null;
+
+  data.games.forEach((g, gi) => {
+    ["pair1", "pair2"].forEach(key => {
+      const pi = g[key].indexOf(targetPlayer);
+      if (pi !== -1) {
+        targetGameIndex = gi;
+        targetTeamKey = key;
+        targetPlayerIndex = pi;
+      }
+    });
+  });
+
+  // Safety check — must both be valid players
+  if (
+    targetGameIndex === null ||
+    targetTeamKey === null ||
+    player === targetPlayer ||
+    player === "(Empty)" ||
+    targetPlayer === "(Empty)"
+  ) return;
+
+  // Swap players
+  const fromTeam = data.games[gameIndex][teamSide === "L" ? "pair1" : "pair2"];
+  const toTeam = data.games[targetGameIndex][targetTeamKey];
+
+  const oldPlayer = toTeam[targetPlayerIndex];
+  toTeam[targetPlayerIndex] = player;
+  fromTeam[playerIndex] = oldPlayer;
+
+  // ✅ Update scheduler state relationships
+  const { playedTogether, playedAgainst } = schedulerState;
+
+  // Remove old relations for both swapped players
+  const allPairs = [
+    ...data.games[gameIndex].pair1,
+    ...data.games[gameIndex].pair2,
+    ...data.games[targetGameIndex].pair1,
+    ...data.games[targetGameIndex].pair2
+  ];
+  allPairs.forEach(a => {
+    allPairs.forEach(b => {
+      if (a !== b) {
+        playedTogether.delete([a, b].sort().join("&"));
+        playedAgainst.delete([a, b].sort().join("&"));
+      }
+    });
+  });
+
+  // Rebuild relationships for both affected games
+  [data.games[gameIndex], data.games[targetGameIndex]].forEach(g => {
+    const all = [...g.pair1, ...g.pair2];
+    const left = g.pair1;
+    const right = g.pair2;
+
+    left.forEach(a => {
+      left.forEach(b => {
+        if (a !== b) playedTogether.set([a, b].sort().join("&"), true);
+      });
+    });
+    right.forEach(a => {
+      right.forEach(b => {
+        if (a !== b) playedTogether.set([a, b].sort().join("&"), true);
+      });
+    });
+    left.forEach(a => {
+      right.forEach(b => {
+        playedAgainst.add([a, b].sort().join("&"));
+      });
+    });
+  });
 
   showRound(index);
 }
+
 
       
 function showRoundold(index) {
