--- a/temp1.html
+++ b/temp1.html
@@ -650,15 +650,136 @@ function shuffle(array) {
 
 }
 
- 
+function AischedulerNextRound() {
+  const { players, numCourts, fixedPairs, restCount, playedTogether, playedAgainst, fixedMap } = schedulerState;
+  const totalPlayers = players.length;
+  const numPlayersPerRound = numCourts * 4;
+  const numResting = Math.max(totalPlayers - numPlayersPerRound, 0);
+  schedulerState.roundIndex++;
+
+  // === 1️⃣ Pick resting players (fairly) ===
+  let resting = [...players]
+    .sort((a, b) => (restCount.get(a) || 0) - (restCount.get(b) || 0))
+    .slice(0, numResting);
+
+  // Ensure fixed pairs rest together
+  for (const p of [...resting]) {
+    if (fixedMap.has(p)) {
+      const partner = fixedMap.get(p);
+      if (!resting.includes(partner)) resting.push(partner);
+    }
+  }
+
+  // Prevent over-resting
+  while (players.length - resting.length < numPlayersPerRound && resting.length > 0) {
+    const maxRest = resting.reduce(
+      (maxP, p) => (restCount.get(p) > restCount.get(maxP) ? p : maxP),
+      resting[0]
+    );
+    resting = resting.filter(p => p !== maxRest);
+  }
+
+  // Players participating this round
+  const playing = players.filter(p => !resting.includes(p)).slice(0, numPlayersPerRound);
+  const restingWithNumber = resting.map(p => {
+    restCount.set(p, (restCount.get(p) || 0) + 1);
+    return `${p}#${restCount.get(p)}`;
+  });
+
+  // === 2️⃣ Generate all possible pairs for current playing group ===
+  const possiblePairs = [];
+  for (let i = 0; i < playing.length - 1; i++) {
+    for (let j = i + 1; j < playing.length; j++) {
+      const key = [playing[i], playing[j]].sort().join("&");
+      const played = playedTogether.has(key);
+      possiblePairs.push({
+        p1: playing[i],
+        p2: playing[j],
+        key,
+        played
+      });
+    }
+  }
+
+  // === 3️⃣ Try to exhaust unplayed pairs first ===
+  const unplayedPairs = possiblePairs.filter(p => !p.played);
+  const pool = unplayedPairs.length >= (playing.length / 2)
+    ? unplayedPairs
+    : possiblePairs; // fallback if few unplayed left
+
+  // Random shuffle for fairness
+  const shuffled = shuffle(pool);
+
+  const pairs = [];
+  const used = new Set();
+
+  for (const { p1, p2, key } of shuffled) {
+    if (!used.has(p1) && !used.has(p2)) {
+      pairs.push([p1, p2]);
+      used.add(p1);
+      used.add(p2);
+      playedTogether.set(key, schedulerState.roundIndex);
+    }
+  }
+
+  // === 4️⃣ If empty courts remain, fill with remaining players ===
+  const free = playing.filter(p => !used.has(p));
+  while (free.length >= 2) {
+    const [p1, p2] = free.splice(0, 2);
+    const key = [p1, p2].sort().join("&");
+    pairs.push([p1, p2]);
+    playedTogether.set(key, schedulerState.roundIndex);
+  }
+
+  // === 5️⃣ Form games (try to avoid repeated matchups) ===
+  const games = [];
+  const usedPairs = new Set();
+  const usedPlayers = new Set();
+
+  const allMatchups = [];
+  for (let i = 0; i < pairs.length - 1; i++) {
+    for (let j = i + 1; j < pairs.length; j++) {
+      const matchupKey = [...pairs[i], ...pairs[j]].sort().join("&");
+      const bothNew = !playedAgainst.has(matchupKey);
+      allMatchups.push({
+        pair1: pairs[i],
+        pair2: pairs[j],
+        matchupKey,
+        bothNew
+      });
+    }
+  }
+
+  allMatchups.sort((a, b) => (b.bothNew ? 1 : 0) - (a.bothNew ? 1 : 0));
+
+  for (const g of allMatchups) {
+    if (games.length >= numCourts) break;
+    const allPlayers = [...g.pair1, ...g.pair2];
+    if (allPlayers.some(p => usedPlayers.has(p))) continue;
+    games.push({
+      court: games.length + 1,
+      pair1: g.pair1,
+      pair2: g.pair2
+    });
+    allPlayers.forEach(p => usedPlayers.add(p));
+    playedAgainst.add(g.matchupKey);
+  }
+
+  // === 6️⃣ Return finalized round ===
+  return {
+    round: schedulerState.roundIndex,
+    resting: restingWithNumber,
+    playing,
+    games
+  };
+}
 
 
- 
 
 
 
   
-function AischedulerNextRound() {
+function AischedulerNextRound1() {
   const { players, numCourts, fixedPairs, restCount, playedTogether, playedAgainst, fixedMap } = schedulerState;
   const totalPlayers = players.length;
   const numPlayersPerRound = numCourts * 4;
