--- a/temp1.html
+++ b/temp1.html
@@ -713,6 +713,114 @@ function shuffle(array) {
 
 }
 
+function AischedulerAdaptiveRound(activePlayers = null) {
+  const {
+    players,
+    numCourts,
+    fixedPairs,
+    restCount,
+    playedTogether,
+    playedAgainst,
+    fixedMap
+  } = schedulerState;
+
+  const totalPlayers = players.length;
+  const numPlayersPerRound = numCourts * 4;
+  const numResting = Math.max(totalPlayers - numPlayersPerRound, 0);
+  schedulerState.roundIndex = (schedulerState.roundIndex || 0) + 1;
+
+  const shuffle = arr => arr.sort(() => Math.random() - 0.5);
+  const currentPlayers = activePlayers && activePlayers.length ? activePlayers : players;
+
+  // === MODE 1: Unique Pair Algorithm (≤8 players) ===
+  if (currentPlayers.length <= 8) {
+    const pairs = [];
+    const usedPlayers = new Set();
+
+    // 1️⃣ Add fixed pairs first
+    for (const [p1, p2] of (fixedMap || new Map()).entries()) {
+      if (
+        currentPlayers.includes(p1) &&
+        currentPlayers.includes(p2) &&
+        !usedPlayers.has(p1) &&
+        !usedPlayers.has(p2)
+      ) {
+        pairs.push([p1, p2]);
+        usedPlayers.add(p1);
+        usedPlayers.add(p2);
+      }
+    }
+
+    // 2️⃣ Generate free pairs
+    const freePlayers = currentPlayers.filter(p => !usedPlayers.has(p));
+    for (let i = 0; i < freePlayers.length - 1; i++) {
+      for (let j = i + 1; j < freePlayers.length; j++) {
+        pairs.push([freePlayers[i], freePlayers[j]]);
+      }
+    }
+
+    // 3️⃣ Build valid games (no overlap)
+    const games = [];
+    const usedPairs = new Set();
+    for (let i = 0; i < pairs.length - 1; i++) {
+      for (let j = i + 1; j < pairs.length; j++) {
+        const allPlayers = [...pairs[i], ...pairs[j]];
+        if (new Set(allPlayers).size === 4) {
+          const key1 = pairs[i].sort().join("&");
+          const key2 = pairs[j].sort().join("&");
+          if (!usedPairs.has(key1) && !usedPairs.has(key2)) {
+            games.push({ pair1: pairs[i], pair2: pairs[j] });
+            usedPairs.add(key1);
+            usedPairs.add(key2);
+          }
+        }
+      }
+    }
+
+    const selectedGames = shuffle(games).slice(0, numCourts);
+
+    // 4️⃣ Resting players
+    const used = new Set(selectedGames.flatMap(g => [...g.pair1, ...g.pair2]));
+    const resting = currentPlayers.filter(p => !used.has(p));
+
+    // Update rest counts
+    resting.forEach(p => restCount.set(p, (restCount.get(p) || 0) + 1));
+    const restingWithNumber = resting.map(p => `${p}#${restCount.get(p)}`);
+
+    // 5️⃣ Players actually playing
+    const playing = currentPlayers.filter(p => !resting.includes(p));
+
+    // 6️⃣ Update fairness memory
+    selectedGames.forEach(g => {
+      g.pair1.forEach(a => g.pair1.forEach(b => { if (a !== b) playedTogether.add([a, b].sort().join("&")); }));
+      g.pair2.forEach(a => g.pair2.forEach(b => { if (a !== b) playedTogether.add([a, b].sort().join("&")); }));
+      g.pair1.forEach(a => g.pair2.forEach(b => { playedAgainst.add([a, b].sort().join("&")); }));
+    });
+
+    // ✅ Return in your exact format
+    return {
+      round: schedulerState.roundIndex,
+      resting: restingWithNumber,
+      playing,
+      games: selectedGames.map((g, i) => ({
+        court: i + 1,
+        pair1: g.pair1,
+        pair2: g.pair2
+      }))
+    };
+  }
+
+  // === MODE 2: Fair Rotation (for >8 players)
+  const result = AischedulerNextRound(currentPlayers);
+  return {
+    round: result.round,
+    resting: result.resting,
+    playing: result.playing,
+    games: result.games
+  };
+}
+  
+                                      
 function AischedulerNextRound() {
   const { players, numCourts, fixedPairs, restCount, playedTogether, playedAgainst, fixedMap } = schedulerState;
   const totalPlayers = players.length;
@@ -1508,6 +1616,7 @@ window.addEventListener('beforeunload', function (e) {
 
 </body>
 </html>
+
 
 
 
